--- a/portfolio.html
+++ b/portfolio.html
@@ -174,30 +174,12 @@
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a
-              href="./images/nunti/nunta_p_3.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_p_3.jpg"
-                alt="Wedding Photo 3"
-                class="img-fluid portrait"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a
-              href="./images/nunti/nunta_p_4.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_p_4.jpg"
-                alt="Wedding Photo 4"
-                class="img-fluid portrait"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
@@ -258,30 +240,12 @@
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a
-              href="./images/nunti/nunta_p_9.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_p_9.jpg"
-                alt="Wedding Photo 9"
-                class="img-fluid portrait"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a
-              href="./images/nunti/nunta_p_10.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_p_10.jpg"
-                alt="Wedding Photo 10"
-                class="img-fluid portrait"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
@@ -318,31 +282,13 @@
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_3.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_3.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_4.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_4.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
@@ -378,76 +324,31 @@
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_7.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_7.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_8.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_8.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_9.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_9.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_10.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_10.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/nunti/nunta_l_11.jpg"
-              data-lightbox="image-wedding"
-            >
-              <img
-                src="./images/nunti/nunta_l_11.jpg"
-                alt="Wedding Photo 11"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-wedding"> </a>
           </div>
         </div>
 
@@ -455,60 +356,24 @@
         <!-- Landscape -->
         <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/botezuri/botez_l_1.jpg"
-              data-lightbox="image-baptism"
-            >
-              <img
-                src="./images/botezuri/botez_l_1.jpg"
-                alt="Baptism Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
         <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/botezuri/botez_l_2.jpg"
-              data-lightbox="image-baptism"
-            >
-              <img
-                src="./images/botezuri/botez_l_2.jpg"
-                alt="Baptism Photo 2"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/botezuri/botez_l_3.jpg"
-              data-lightbox="image-baptism"
-            >
-              <img
-                src="./images/botezuri/botez_l_3.jpg"
-                alt="Baptism Photo 3"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/botezuri/botez_l_4.jpg"
-              data-lightbox="image-baptism"
-            >
-              <img
-                src="./images/botezuri/botez_l_4.jpg"
-                alt="Baptism Photo 2"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
 
@@ -545,31 +410,13 @@
         <!-- Portrait -->
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
           <div class="img-wrapper">
-            <a
-              href="./images/botezuri/botez_p_1.jpg"
-              data-lightbox="image-baptism"
-            >
-              <img
-                src="./images/botezuri/botez_p_1.jpg"
-                alt="Baptism Photo 2"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="baptism">
           <div class="img-wrapper">
-            <a
-              href="./images/botezuri/botez_p_2.jpg"
-              data-lightbox="image-baptism"
-            >
-              <img
-                src="./images/botezuri/botez_p_2.jpg"
-                alt="Baptism Photo 2"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="image-baptism"> </a>
           </div>
         </div>
 
@@ -589,194 +436,82 @@
         </div>
 
         <!-- Family Photos -->
-        <!-- Portraid -->
+        <!-- Portrait -->
         <div class="col-md-4 photo-item" data-category="family-photos">
           <div class="img-wrapper">
-            <a
-              href="./images/fotografii-de-familie/familie-p-1.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-p-1.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="family-photos">
           <div class="img-wrapper">
-            <a
-              href="./images/fotografii-de-familie/familie-p-2.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-p-2.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="family-photos">
           <div class="img-wrapper">
-            <a
-              href="./images/fotografii-de-familie/familie-p-3.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-p-3.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="family-photos">
           <div class="img-wrapper">
-            <a
-              href="./images/fotografii-de-familie/familie-p-4.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-p-4.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="family-photos">
           <div class="img-wrapper">
-            <a
-              href="./images/fotografii-de-familie/familie-p-5.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-p-5.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
+
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper">
-            <a
-              href="./images/fotografii-de-familie/familie-p-6.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-p-6.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
         <!-- Landscape -->
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-1.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-1.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-2.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-2.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-3.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-3.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"></a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-4.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-4.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-5.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-5.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-6.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-6.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
 
         <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/fotografii-de-familie/familie-l-7.jpg"
-              data-lightbox="family-photos"
-            >
-              <img
-                src="./images/fotografii-de-familie/familie-l-7.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="family-photos"> </a>
           </div>
         </div>
 
@@ -889,16 +624,7 @@
 
         <div class="col-md-4 mt-2 photo-item" data-category="studio">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/craciun/craciun-l-8.jpg"
-              data-lightbox="christmas-photos"
-            >
-              <img
-                src="./images/craciun/craciun-l-8.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="christmas-photos"> </a>
           </div>
         </div>
 
@@ -1039,16 +765,7 @@
 
         <div class="col-md-4 mt-2 photo-item" data-category="studio">
           <div class="img-wrapper-landscape">
-            <a
-              href="./images/craciun/craciun-l-18.jpg"
-              data-lightbox="christmas-photos"
-            >
-              <img
-                src="./images/craciun/craciun-l-18.jpg"
-                alt="Christmas Photo 1"
-                class="img-fluid"
-              />
-            </a>
+            <a href="" data-lightbox="christmas-photos"> </a>
           </div>
         </div>
         <!-- Portrait -->
