--- a/portfolio.html
+++ b/portfolio.html
@@ -161,6 +161,21 @@
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
+              href="./images/nunti/nunta_p_1.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_1.jpg"
+                alt="Wedding Photo 2"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
               href="./images/nunti/nunta_p_2.jpg"
               data-lightbox="image-wedding"
             >
@@ -172,16 +187,37 @@
             </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_p_3.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_3.jpg"
+                alt="Wedding Photo 2"
+                class="img-fluid portrait"
+              />
+            </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_p_4.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_4.jpg"
+                alt="Wedding Photo 5"
+                class="img-fluid portrait"
+              />
+            </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
@@ -190,12 +226,13 @@
             >
               <img
                 src="./images/nunti/nunta_p_5.jpg"
-                alt="Wedding Photo 5"
+                alt="Wedding Photo 6"
                 class="img-fluid portrait"
               />
             </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
@@ -204,12 +241,13 @@
             >
               <img
                 src="./images/nunti/nunta_p_6.jpg"
-                alt="Wedding Photo 6"
+                alt="Wedding Photo 7"
                 class="img-fluid portrait"
               />
             </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
@@ -218,12 +256,13 @@
             >
               <img
                 src="./images/nunti/nunta_p_7.jpg"
-                alt="Wedding Photo 7"
+                alt="Wedding Photo 8"
                 class="img-fluid portrait"
               />
             </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
             <a
@@ -238,18 +277,149 @@
             </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_p_9.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_9.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
           </div>
         </div>
+
         <div class="col-md-4 photo-item" data-category="wedding">
           <div class="img-wrapper">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_p_10.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_10.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_11.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_11.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_12.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_12.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_13.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_13.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_14.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_14.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_15.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_15.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_16.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_16.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item" data-category="wedding">
+          <div class="img-wrapper">
+            <a
+              href="./images/nunti/nunta_p_17.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_p_17.jpg"
+                alt="Wedding Photo 8"
+                class="img-fluid portrait"
+              />
+            </a>
           </div>
         </div>
 
         <!-- Wedding Photos Landscape -->
+        <div class="col-md-4 photo-item mt-2" data-category="wedding">
+          <div class="img-wrapper-landscape">
+            <a href="" data-lightbox="image-wedding"> </a>
+          </div>
+        </div>
+
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
             <a
@@ -282,13 +452,31 @@
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_3.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_3.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_4.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_4.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
@@ -324,31 +512,106 @@
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_7.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_7.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_8.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_8.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_9.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_9.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_10.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_10.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
           <div class="img-wrapper-landscape">
-            <a href="" data-lightbox="image-wedding"> </a>
+            <a
+              href="./images/nunti/nunta_l_11.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_11.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item mt-2" data-category="wedding">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/nunti/nunta_l_12.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_12.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4 photo-item mt-2" data-category="wedding">
+          <div class="img-wrapper-landscape">
+            <a
+              href="./images/nunti/nunta_l_13.jpg"
+              data-lightbox="image-wedding"
+            >
+              <img
+                src="./images/nunti/nunta_l_13.jpg"
+                alt="Wedding Photo 11"
+                class="img-fluid"
+              />
+            </a>
           </div>
         </div>
 
